# bord

./: .gitignore  Makefile  app.py  config.json  pyproject.toml
bord/: bord.py  cli.py  config.py
test/: test_config.py
