[tool.poetry]
name = "bord"
version = "0.3.2"
description = ""
authors = ["Steinn Eldjárn Sigurðarson <steinnes@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pyppeteer2 = "=0.2.2"
urllib3 = "^1.25"
screeninfo = "^0.6.1"
asyncclick = "^7.0"

[tool.poetry.dev-dependencies]
black = {version = "^18.3-alpha.0", allow-prereleases = true}
flake8 = "^3.7"
pytest = "^5.3"

[tool.poetry.scripts]
bord = 'bord.cli:main'

[tool.black]
line-length = 115

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
